--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
-lamguage: java
+install: gradle wrapper --gradle-version 4.2
+language: java
+sudo: required
+jdk:
+- oraclejdk8
+before_script:
+- chmod a+x gradlew
+- chmod +x gradle/wrapper/gradle-wrapper.jar
+script: ./gradlew build
